升级版本 消除base64警告